# nix-suiup

./: Cargo.toml  Changes.md  README.md  build.rs  flake.nix  install.sh
.config/: nextest.toml
.github/workflows/: rust.yml  update-releases.yml
binaries/: ledger-signer.toml  move-analyzer.toml  mvr.toml  site-builder.toml  sui-node.toml  sui.toml  walrus.toml  yubikey-signer.toml
nix/: local-walrus-env.sh  releases.json  test-env.sh
nix/modules/: postgresql-sui.nix  seal-key-server.nix  sui-fullnode.nix  sui-indexer-alt-jsonrpc.nix  sui-indexer-alt.nix  sui-stack.nix  walrus-aggregator.nix  walrus-publisher.nix
nix/patches/: sui-rpc-api-build.rs
nix/source-releases/: mainnet-v1.67.3.nix  mainnet-v1.70.2.nix
nix/source-releases-seal/: seal-v0.6.6.nix
nix/source-releases-walrus/: mainnet-v1.47.1.nix
src/: fs_utils.rs  handle_commands.rs  lib.rs  main.rs  patchelf.rs  paths.rs  registry.rs  standalone.rs  types.rs
src/commands/: cleanup.rs  doctor.rs  install.rs  list.rs  mod.rs  patch.rs  remove.rs  switch.rs  update.rs
src/commands/default/: get.rs  mod.rs  set.rs
src/component/: doctor.rs  install.rs  list.rs  mod.rs  remove.rs
src/handlers/: cleanup.rs  download.rs  install.rs  mod.rs  release.rs  self_.rs  show.rs  update.rs  version.rs
tests/: commands_test.rs  integration_test.rs  test_utils.rs
