[package]
name = "suiup"
description = "Sui Tooling Version Manager."
version = "0.0.10"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "3.1.1"
comfy-table = "7.2.2"
console = { version = "0.16", features = ["windows-console-colors"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
flate2 = "1.1.2"
futures-util = "0.3.31"
indicatif = "0.18"
lazy_static = "1.5.0"
regex = "1.12.3"
md5 = "0.8"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
toml = "1.0"
tar = "0.4.44"
tempfile = "3.20"
filetime = "0.2"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
whoami = "2.0.2"

[features]
nix-patchelf = []

[dev-dependencies]
assert_cmd = "2.0"
mockall = "0.14.0"
predicates = "3.1"

[profile.test]
inherits = "release"
